cert-manager/test-nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-service 
spec:
  ports:
    - protocol: TCP
      port: 80
  selector:
    name: test-nginx
